syntax = "proto3";
package pb;

option go_package = ".;pb";

// 逐个百分比掉落表
message TablePercent {
  uint32 type = 1;
  uint32 id = 2;
  float prob = 3;
  uint32 min = 4;
  uint32 max = 5;
}

// 权重掉落组式掉落母集进阶掉落表
message TableWeightGroupMaster {
  uint32 master_id = 1; // 母集编号
  uint32 subset_id = 2; // 子集编号
  uint32 subset_desc = 3; // 子集说明
  uint32 next_subset_id = 4; // 进阶子集
  uint32 next_subset_min = 5; // 最小进阶次数
  uint32 next_subset_max = 6; // 最大进阶次数
}

// 权重掉落组式掉落子集表
message TableWeightGroupSubset {
  uint32 subset_id = 1; // 子集编号
  uint32 fall_type = 2; // 掉落种类
  uint32 fall_type_id = 3; // 掉落种类编号
  uint32 subset_num_min = 4; // 最小数量
  uint32 subset_num_max = 5; // 最大数量
  uint32 subset_weight = 6; // 权重
}

// 木桶原理掉落表
message TableVat {
}